Refactored 'max-width' breakpoints and added another fix for tablet header card spacing in 'style.css'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,10 +29,11 @@ body {
 
 @media (max-width: 991.98px) {
     #game {
+        position: relative;
+        margin-top: .5rem;
         top: 6.5rem;
     } 
 }
-
 
 @media (max-width: 767.98px) { 
     #game {
@@ -177,6 +178,10 @@ body {
     font-size: 3.5rem;
     font-weight: 400;
     padding: .5rem 1rem;
+}
+
+#timer-frame p {
+    padding: .25rem 1rem;
 }
 
 /*-----------------------------  hides game header elements*/
